# ic-encryption-service

./: .gitignore  Cargo.toml  README.md  dfx.json  encryption_service.did
src/: lib.rs
