[package]
name = "encryption-service-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# AES-GCM encryption
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
