[package]
name = "encryption-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# AES-GCM encryption
aes-gcm = { version = "0.10", default-features = false, features = ["alloc", "aes"] }
sha2 = { version = "0.10", default-features = false }
hkdf = "0.12"
getrandom = { version = "0.2", features = ["custom"] }
